[package]
name = "unc-chunks-primitives"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "This crate hosts Utility chunks-related error types"
repository.workspace = true
license.workspace = true
publish = true

[lints]
workspace = true

[dependencies]
unc-chain-primitives.workspace = true
unc-primitives.workspace = true
